<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EarthquakeApp</string>
    <string name="allReview">All Review</string>
    <string name="userReview">User Review</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons at bottm -->
    <string name="btn_myReview">My Review</string>
    <string name="btn_all">All</string>
    <string name="btn_signUp">Sign In/Sign Up </string>
    <string name="title_activity_expert">ExpertActivity</string>

    <!-- Sign up Form -->
    <string name="et_Name">Enter Name</string>
    <string name="et_Location">Enter Location</string>
    <string name="et_Email">Enter Email</string>
    <string name="et_Password">Enter Password</string>
    <string name="et_MobileNo">Enter Mobile Number</string>
    <string name="btn_Submit">Submit</string>

</resources>