<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techroadians.earthquakeapp.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="10" >

        <Button
            android:id="@+id/btnMyReview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:text="@string/btn_myReview" />

        <Button
            android:id="@+id/btnAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:drawableLeft="@android:drawable/ic_input_get"
            android:text="@string/btn_all" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_signUp" />

    <ImageView
        android:id="@+id/ivUploadPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSignUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>